@@ -53,6 +53,7 @@ S3method(makeRLearner,classif.fnn)
 S3method(makeRLearner,classif.gbm)
 S3method(makeRLearner,classif.geoDA)
 S3method(makeRLearner,classif.glmboost)
+S3method(makeRLearner,classif.glmnet)
 S3method(makeRLearner,classif.kknn)
 S3method(makeRLearner,classif.knn)
 S3method(makeRLearner,classif.ksvm)
@@ -142,6 +143,7 @@ S3method(predictLearner,classif.fnn)
 S3method(predictLearner,classif.gbm)
 S3method(predictLearner,classif.geoDA)
 S3method(predictLearner,classif.glmboost)
+S3method(predictLearner,classif.glmnet)
 S3method(predictLearner,classif.kknn)
 S3method(predictLearner,classif.knn)
 S3method(predictLearner,classif.ksvm)
@@ -263,6 +265,7 @@ S3method(trainLearner,classif.fnn)
 S3method(trainLearner,classif.gbm)
 S3method(trainLearner,classif.geoDA)
 S3method(trainLearner,classif.glmboost)
+S3method(trainLearner,classif.glmnet)
 S3method(trainLearner,classif.kknn)
 S3method(trainLearner,classif.knn)
 S3method(trainLearner,classif.ksvm)
