@@ -10,6 +10,7 @@
 #'   \item{\bold{classif.ctree}}{\cr Conditional Inference Trees from party package: \code{\link[party]{ctree}}}
 #'   \item{\bold{classif.fnn}}{\cr Fast k-Nearest Neighbor from FNN package: \code{\link[FNN]{knn}}}
 #'   \item{\bold{classif.gbm}}{\cr Gradient boosting machine from gbm package: \code{\link[gbm]{gbm}}}
+#'   \item{\bold{classif.glmnet}}{\cr GLM with lasso or elasticnet regularization from glmnet package: \code{\link[glmnet]{glmnet}}}
 #'   \item{\bold{classif.geoDA}}{\cr Geometric Predictive Discriminant Analysis from DiscriMiner package: \code{\link[DiscriMiner]{geoDA}}}
 #'   \item{\bold{classif.glmboost}}{\cr Boosting for GLMs from mboost package: \code{\link[mboost]{glmboost}}\cr
 #'     Note that \code{family} has been set to \code{Binomial()} by default.}
